Added comments to options

--- a/api.conf
+++ b/api.conf
@@ -23,5 +23,17 @@
 # SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 [api]
+
+# Repository path.
+#
 repository = malware/
+
+# Database connection string.
+#
+# Provides database driver name, credentials, host and database name.
+# To get more details about configuration see:
+# http://docs.sqlalchemy.org/en/latest/core/engines.html
+# Example:
+# dialect+driver://username:password@host:port/database
+#
 database = mysql://root:toor@localhost/malware
